--- a/style.css
+++ b/style.css
@@ -1,1 +1,15 @@
+body {
+  background-color: green;
+}
 
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
+
+p {
+  font-family: 'Arial';
+  font-size: 21px;
+}
